created framework for MyFees page. updated locations sitewide to replace "Vendor" labels with "Contractor" New files added - [MyFees] Files modified - [UserClosedForms.variables.json,pages-config.json,Main.html,VendorApplication.html,FindForm.html,ManageMunicipalityVendors.variables.json,NewForm.html,ViewProject.html,EditInspection.html,Forms.html,MyMunicipality.html,UserOpenForms.html,DashBoards.html,app.variables.json,ManageMunicipalityVendors.html,VendorApplication.variables.json,CompanyMunicipalities.html,EditForm.html,FindForm.variables.json,pom.xml,EditGISRecord.html,UserClosedForms.html,ProcessForms.html]

--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -28,7 +28,7 @@
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn7">
                                         <wm-label padding="unset 0.5em" name="label3" caption="Click &quot;+Add Municipality&quot; to submit your company details to a municipality in order for your company to be available on CivicXpress forms."></wm-label>
                                         <wm-label padding="unset 0.5em" name="label4" caption="After your application has been submitted, the municipality will review your information within 1-2 business days."></wm-label>
-                                        <wm-label padding="unset 0.5em" name="label5" caption="Note: some municipalities require a Vendor Application Fee that must be submitted along with the application."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label5" caption="Note: some municipalities require a Contractor Application Fee that must be submitted along with the application."></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow7_1">
