--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -135,7 +135,7 @@
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow38_1" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn56" padding="unset 1em unset unset">
-                                                                <wm-label caption="Require Vendor" name="label13_1"></wm-label>
+                                                                <wm-label caption="Require Contractor" name="label13_1"></wm-label>
                                                                 <wm-select show="true" datavalue="bind:Variables.CurrentFormObj.dataSet.data[$i].vendorSelection &amp;&amp; Variables.CurrentFormObj.dataSet.data[$i].multipleVendors ? 'Multiple' : (Variables.CurrentFormObj.dataSet.data[$i].vendorSelection ? 'Single' : 'None')"
                                                                 dataset="None,Single,Multiple" name="selectVendorOption" width="180px"></wm-select>
                                                                 <wm-label padding="unset 0.5em" name="label26" caption="This requires the user to add a company registered in CivicXpress to the form. You can allow for one or many companies."
