--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -115,7 +115,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneVENDOR" title="BY VENDOR">
+                            <wm-tabpane name="tabpaneVENDOR" title="BY CONTRACTOR">
                                 <wm-layoutgrid name="layoutgridVendor">
                                     <wm-gridrow name="gridrow24">
                                         <wm-gridcolumn columnwidth="12" horizontalalign="center" name="gridcolumn73">
@@ -136,7 +136,7 @@
                                     <wm-gridrow padding=".5em unset" name="gridrow26">
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn78"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn79">
-                                            <wm-label class="col-md-3 form-control-static" caption="Select Vendor" width="100%" name="label20" fontweight="bold"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" caption="Select Contractor" width="100%" name="label20" fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="7" name="gridcolumn80">
                                             <wm-select dataset="bind:Variables.GetVendorsForMunicipality.dataSet" datafield="All Fields" displayfield="vendor.companyName" datavalue="bind:Variables.GetVendorsForMunicipality.firstRecord" name="selectVendor"
