--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -232,7 +232,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneVENDOR" title="VENDOR"></wm-tabpane>
+                                <wm-tabpane name="tabpaneVENDOR" title="CONTRACTOR"></wm-tabpane>
                                 <wm-tabpane name="tabpaneFORMS" title="FORMS">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectForms.dataSet" navigation="Classic" name="gridProjectForms" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
                                         <wm-grid-column-group name="group1" caption="Form Details">
