--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -74,7 +74,7 @@
                         <wm-chart type="Pie" title="Fee Types" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.svFeeByTypes.dataSet" labeltype="percent" showlegend="top" name="chartFee" xaxisdatakey="fee" yaxisdatakey="counts" theme="Orient"></wm-chart>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn37" padding="unset 1em unset unset">
-                        <wm-chart type="Pie" title="Active Vendors" height="250px" iconclass="wi wi-pie-chart" name="chartVendors" dataset="bind:Variables.svFormsVendorsData.dataSet" xaxisdatakey="vendorCompany" yaxisdatakey="counts" theme="Orient"></wm-chart>
+                        <wm-chart type="Pie" title="Active Contractors" height="250px" iconclass="wi wi-pie-chart" name="chartVendors" dataset="bind:Variables.svFormsVendorsData.dataSet" xaxisdatakey="vendorCompany" yaxisdatakey="counts" theme="Orient"></wm-chart>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17" padding="2em unset">
