--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -178,7 +178,7 @@
                                         </wm-listtemplate>
                                     </wm-livelist>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneVendor" title="VENDOR" show="bind:Variables.lvFormType.dataSet.data[$i].vendorSelection">
+                                <wm-tabpane name="tabpaneVendor" title="CONTRACTOR" show="bind:Variables.lvFormType.dataSet.data[$i].vendorSelection">
                                     <wm-layoutgrid name="layoutgrid18">
                                         <wm-gridrow name="gridrow62">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn129">
@@ -201,8 +201,8 @@
                                                         <wm-grid-column binding="sharedOn" caption="Date Added" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" edit-widget-type="timestamp"
                                                         show="true" filterwidget="text" readonly="false"></wm-grid-column>
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                        <wm-grid-action key="addNewRow" display-name="Add Vendor" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Vendor" action="Widgets.dialogAddVendor.open()" shortcutkey=""
-                                                        disabled="bind:(!Variables.lvFormType.dataSet.data[$i].multipleVendors &amp;&amp; Variables.Cx2Vendors2formData.dataSet.data.length > 0) || !Variables.svUserPermissions.dataSet.canEdit"></wm-grid-action>
+                                                        <wm-grid-action key="addNewRow" display-name="Add Contractor" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Contractor" action="Widgets.dialogAddVendor.open()"
+                                                        shortcutkey="" disabled="bind:(!Variables.lvFormType.dataSet.data[$i].multipleVendors &amp;&amp; Variables.Cx2Vendors2formData.dataSet.data.length > 0) || !Variables.svUserPermissions.dataSet.canEdit"></wm-grid-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.svUserPermissions.dataSet.canEdit" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="Widgets.dialogVendorDeleteConf.open();deleterowAction($event)"
                                                         disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
@@ -758,7 +758,7 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewAddVendor">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Vendor Search" iconclass="wi wi-work" name="dialogAddVendor">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Contractor Search" iconclass="wi wi-work" name="dialogAddVendor">
             <wm-layoutgrid name="layoutgrid12">
                 <wm-gridrow name="gridrow38">
                     <wm-gridcolumn columnwidth="1" name="gridcolumn87"></wm-gridcolumn>
@@ -771,7 +771,7 @@
                     <wm-gridcolumn columnwidth="1" name="gridcolumn158"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="10" name="gridcolumn159">
                         <wm-composite name="composite5_1">
-                            <wm-checkbox caption="Set as Primary Vendor" name="checkboxPrimaryVendor" checkedvalue="true" uncheckedvalue="false" datavalue="true"></wm-checkbox>
+                            <wm-checkbox caption="Set as Primary Contractor" name="checkboxPrimaryVendor" checkedvalue="true" uncheckedvalue="false" datavalue="true"></wm-checkbox>
                         </wm-composite>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="1" name="gridcolumn160"></wm-gridcolumn>
@@ -793,7 +793,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions4">
-                <wm-button class="btn-primary" caption="Add Vendor" type="button" margin="unset 0.5em" iconclass="wi wi-plus" show="bind:!!Widgets.searchVendor.datavalue.id" on-click="buttonTagVendorClick($event, $scope)" name="buttonTagVendor"></wm-button>
+                <wm-button class="btn-primary" caption="Add Contractor" type="button" margin="unset 0.5em" iconclass="wi wi-plus" show="bind:!!Widgets.searchVendor.datavalue.id" on-click="buttonTagVendorClick($event, $scope)" name="buttonTagVendor"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button11" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
@@ -922,11 +922,11 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewVendorDeleteConf">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Delete Vendor" iconclass="wi wi-trash" name="dialogVendorDeleteConf">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Delete Contractor" iconclass="wi wi-trash" name="dialogVendorDeleteConf">
             <wm-layoutgrid name="layoutgrid26_1">
                 <wm-gridrow name="gridrow81_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn159_2" horizontalalign="center">
-                        <wm-label padding="unset 0.5em" caption="Are you sure you want to delete this vendor?" name="label76"></wm-label>
+                        <wm-label padding="unset 0.5em" caption="Are you sure you want to delete this contractor?" name="label76"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
@@ -954,14 +954,14 @@
                         <wm-composite name="composite6" padding="unset 2em" required="true">
                             <wm-label class="col-md-3 form-control-static" name="label94" caption="Date" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container9">
-                                <wm-date name="dateInspectionRequest" mindate="CURRENT_DATE" datepattern="MM-dd-yyyy"></wm-date>
+                                <wm-date name="dateInspectionRequest" mindate="CURRENT_DATE" datepattern="MM-dd-yyyy" placeholder="Select Date"></wm-date>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions10">
-                <wm-button class="btn-primary" caption="Request" type="button" margin="unset 0.5em" name="button2InspectionRequest" on-click="Variables.lvMasterInspectionsInsert.createRecord()" iconclass="wi wi-plus" show="true" disabled="bind:!Widgets.selectInspectionDesign.datavalue || !Widgets.dateInspectionRequest.datavalue"></wm-button>
+                <wm-button class="btn-primary" caption="Request Inspection" type="button" margin="unset 0.5em" name="button2InspectionRequest" on-click="Variables.lvMasterInspectionsInsert.createRecord()" iconclass="wi wi-plus" show="true" disabled="bind:!Widgets.selectInspectionDesign.datavalue || !Widgets.dateInspectionRequest.datavalue"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button21" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
